--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="greendark">#1a434e</color>
     <color name="greenlight">#1f505b</color>
     <color name="whitedark">#e5e5e5</color>
+    <color name="kelabu">#9eaeb3</color>
+
 </resources>
