--- a/app/src/main/res/layout/fragment_entertainment_page.xml
+++ b/app/src/main/res/layout/fragment_entertainment_page.xml
@@ -8,15 +8,27 @@
     android:background="#1A434E"
     tools:context=".entertainment_page">
 
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="410dp"
+        android:layout_height="609dp"
+        android:layout_marginBottom="-35dp"
+        android:src="@drawable/white_circle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/BtnMilestoneAchievement"
         android:layout_width="180dp"
         android:layout_height="60dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="200dp"
         android:text="MIlestone Achievement"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.753"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
@@ -50,5 +62,38 @@
         app:layout_constraintEnd_toEndOf="@+id/BtnMilestoneAchievement"
         app:layout_constraintStart_toStartOf="@+id/BtnMilestoneAchievement"
         app:layout_constraintTop_toBottomOf="@+id/BtnMilestoneAchievement" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="40dp"
+        android:src="@drawable/icons8_milestone_64"
+        app:layout_constraintBottom_toBottomOf="@+id/BtnMilestoneAchievement"
+        app:layout_constraintEnd_toStartOf="@+id/BtnMilestoneAchievement"
+        app:layout_constraintTop_toTopOf="@+id/BtnMilestoneAchievement"
+        app:layout_constraintVertical_bias="0.6" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="40dp"
+        android:src="@drawable/icons8_redeem_points_64"
+        app:layout_constraintBottom_toBottomOf="@+id/BtnPointsRedemption"
+        app:layout_constraintEnd_toStartOf="@+id/BtnPointsRedemption"
+        app:layout_constraintTop_toTopOf="@+id/BtnPointsRedemption"
+        app:layout_constraintVertical_bias="0.625" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="30dp"
+        android:src="@drawable/icons8_fortune_wheel_53"
+        app:layout_constraintBottom_toBottomOf="@+id/BtnLuckyDraw"
+        app:layout_constraintEnd_toStartOf="@+id/BtnLuckyDraw"
+        app:layout_constraintTop_toTopOf="@+id/BtnLuckyDraw"
+        app:layout_constraintVertical_bias="0.475" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
