--- a/app/src/main/res/layout/fragment_entertainment_page.xml
+++ b/app/src/main/res/layout/fragment_entertainment_page.xml
@@ -12,12 +12,14 @@
         android:id="@+id/imageView8"
         android:layout_width="410dp"
         android:layout_height="609dp"
-        android:layout_marginBottom="-35dp"
+        android:layout_marginBottom="-30dp"
         android:src="@drawable/white_circle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/BtnMilestoneAchievement"
