--- a/app/src/main/res/drawable/white_circle.xml
+++ b/app/src/main/res/drawable/white_circle.xml
@@ -8,7 +8,8 @@
     </solid>
 
     <corners
-        android:radius="50dp">
+        android:topRightRadius="50dp"
+        android:topLeftRadius="50dp">
 
     </corners>
 </shape>
