--- a/app/src/main/res/drawable/round_corner.xml
+++ b/app/src/main/res/drawable/round_corner.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white"/>
-    <corners android:radius="100dp"/>
+    <corners
+        android:radius="100dp"/>
 </shape>
