--- a/app/src/main/res/layout/fragment_entertainment_page.xml
+++ b/app/src/main/res/layout/fragment_entertainment_page.xml
@@ -10,27 +10,27 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="410dp"
-        android:layout_height="609dp"
-        android:layout_marginBottom="-30dp"
+        android:layout_width="408dp"
+        android:layout_height="608dp"
         android:src="@drawable/white_circle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/BtnMilestoneAchievement"
         android:layout_width="180dp"
         android:layout_height="60dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="16dp"
         android:text="MIlestone Achievement"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.753"
+        app:layout_constraintHorizontal_bias="0.823"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/imageView8" />
 
     <TextView
         android:id="@+id/textView3"
