--- a/app/src/main/res/layout/fragment_video_page.xml
+++ b/app/src/main/res/layout/fragment_video_page.xml
@@ -73,11 +73,15 @@
         android:id="@+id/TVGetMPoints"
         android:layout_width="178dp"
         android:layout_height="87dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="10dp"
         android:text="Enjoy the video"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout6"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
         app:layout_constraintTop_toTopOf="@+id/imageView7" />
